OC-537 MQTT protocol adapter (#228)
* OC-513 ~ Spring 5, Hibernate 5 and other version updates. JUnit 5 does not work without major changes, unit tests are commented for now.

* OC-513 ~ Updates framework and library versions.

* OC-513 ~ Removes commented code.

* OC-513 ~ Sets 'schema_version' as Flyway table name.

* OC-513 ~ Removes final from entity methods to resolve Hibernate warning.

* OC-513 ~ Reverts --tags not @NightlyBuildOnly to --tags
~@NightlyBuildOnly.

Somehow the test-jar-with-dependecies can not be started when using
'not' instead of '~'.

* OC-513 ~ Resolves Cucumber warings regarding deprecated "--tags ~@Tags".

* OC-513 ~ Attempts to fix osgp-protocol-adapter-iec61850 startup problem.

* OC-513 ~ Attempts to fix single quotes around 'not @NightlyBuildOnly'.

* OC-513 ~ Uses 4 threads for the Maven build.

* OC-513 ~ Removes git submodule update stage from PR pipeline script.

* OC-513 ~ Attempts to fix single quotes around 'not @NightlyBuildOnly'.

* OC-513 ~ Resolves several SonarQube issues.

* OC-513 ~ Resolves some SonarQube issues.

* OC-513 ~ Resolves some more SonarQube issues.

* OC-513 ~ Processes review comments.

* OC-513 ~ Resolves several SonarQube issues.

* OC-513 ~ Fixes SonarQube issues.

* OC-513 ~ Resolves last SonarQube issue.

* OC-513 ~ Fixes compilation issues after merge

* OC-513 ~ Reverts some changes

* OC-513 ~ Fixes for cucumber tests

* OC-535 ~ Fixes protocol adapter IEC60870 "component" tests

* OC-535: Updates junit. More to follow.

* OC-535 ~ Updates Maven JAXB plugin to version 2.4

Moves xjb files to separate bindings folder and adds common.xjb file to
enable cleaner configuration in pom file.

* OC-535 ~ Fixes startup of osgp-protocol-adapter-iec60870.

* OC-535 ~ Resolves 3 major SonarQube issues.

* OC-535 ~ Uses repo2.maven.org instead of repo.fusesource.com.

* OC-535 ~ Adds initial changes for Netty library update in PA OSLP

* OC-535 ~ 

--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
     <module>osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870</module>
     <module>osgp/protocol-adapter-iec60870/osgp-protocol-simulator-iec60870</module>
 
+    <!-- protocol-adapter-mqtt -->
+    <module>osgp/protocol-adapter-mqtt/parent-pa-mqtt</module>
+    <module>osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt</module>
+    <module>osgp/protocol-adapter-mqtt/osgp-protocol-simulator-mqtt</module>
+
     <!-- platform -->
     <module>osgp/platform/parent-platform</module>
     <module>osgp/platform/osgp-domain-core</module>
