FLEX-5284 ~ Disables device communication monitoring task.
This restores the default value false for 'communication.monitoring.enabled' for osgp-adapter-domain-distributionautomation. For the MQTT implemenation the documentation is expanded with a section which documents the use of the property.

--- a/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
@@ -10,7 +10,7 @@
 # then the application will use the defaults values below
 
 # Configures communication monitoring. Set to true for enabling, set to false for disabling 
-communication.monitoring.enabled=true
+communication.monitoring.enabled=false
 
 # Configures the minimum time between task runs, 
 # to prevent multiple domain adapters to run the task at the same time (time in minutes)
