Updates pom files for JDK11 compliancy

--- a/osgp/protocol-adapter-iec60870/osgp-iec60870/pom.xml
+++ b/osgp/protocol-adapter-iec60870/osgp-iec60870/pom.xml
@@ -28,6 +28,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+    </dependency>
+
     <!-- Spring Framework -->
     <dependency>
       <groupId>org.springframework</groupId>
