--- a/public-lighting-demo-app/web-demo-app/pom.xml
+++ b/public-lighting-demo-app/web-demo-app/pom.xml
@@ -111,6 +111,11 @@
       <artifactId>orika-core</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>javax.xml.soap</groupId>
+      <artifactId>javax.xml.soap-api</artifactId>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
