--- a/super/pom.xml
+++ b/super/pom.xml
@@ -92,6 +92,7 @@
     <maven.eclipse.plugin.version>2.10</maven.eclipse.plugin.version>
     <maven.exec.plugin.version>1.6.0</maven.exec.plugin.version>
     <jaxb2.maven.plugin.version>2.5.0</jaxb2.maven.plugin.version>
+    <jaxb.api.version>2.3.1</jaxb.api.version>
     <spotbugs.maven.plugin.version>3.1.12.2</spotbugs.maven.plugin.version>
     <pmd.maven.plugin.version>3.13.0</pmd.maven.plugin.version>
     <checkstyle.maven.plugin.version>3.1.1</checkstyle.maven.plugin.version>
@@ -127,6 +128,7 @@
     <cucumber.version>5.5.0</cucumber.version>
     <sun.httpserver.version>20070405</sun.httpserver.version>
     <postgresql.version>42.2.11</postgresql.version>
+    <javax.xml.soap-api.version>1.4.0</javax.xml.soap-api.version>
   </properties>
 
   <repositories>
@@ -482,6 +484,13 @@
         <groupId>javax.servlet</groupId>
         <artifactId>jstl</artifactId>
         <version>${servlet.jstl.version}</version>
+      </dependency>
+
+      <!--  Jaxb xml bind -->
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>${jaxb.api.version}</version>
       </dependency>
 
       <!-- Joda Time (Date/Time functions) -->
@@ -874,6 +883,11 @@
         <version>${sun.httpserver.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>javax.xml.soap</groupId>
+        <artifactId>javax.xml.soap-api</artifactId>
+        <version>${javax.xml.soap-api.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
