--- a/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/osgp-simulator-protocol-iec61850.properties
+++ b/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/osgp-simulator-protocol-iec61850.properties
@@ -1,8 +1,14 @@
+#rtu.port=60102
+#rtu.icd=Pampus.icd
+#
+#rtu.serverName=WAGO61850Server
+#rtu.stopGeneratingValues=false
+server.port=8081
 rtu.port=60102
-rtu.icd=Pampus.icd
+rtu.icd=/etc/osp/iec61850-server-models/FlexOVL_540_171101_2_out-unbuffered.icd
+rtu.serverName=AA1TH01
+rtu.stopGeneratingValues=true
 
-rtu.serverName=WAGO61850Server
-rtu.stopGeneratingValues=false
-rtu.updateValuesDelay=2000
+rtu.updateValuesDelay=200
 rtu.updateValuesPeriod=10000
 rtu.enableUpdatePqValuesEventListener=false
