--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/pom.xml
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-platform</artifactId>
-    <version>4.40.0-SNAPSHOT</version>
+    <version>5.1.0-SNAPSHOT</version>
     <relativePath>../parent-platform/pom.xml</relativePath>
   </parent>
 
@@ -39,8 +39,6 @@
 
   <properties>
     <display.version>${project.version}-${BUILD_TAG}</display.version>
-    <kafka.version>2.3.1</kafka.version>
-    <avro.version>1.9.1</avro.version>
     <kafka-avro-serializer.version>3.3.1</kafka-avro-serializer.version>
   </properties>
 
@@ -70,7 +68,7 @@
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-ws-distributionautomation</artifactId>
     </dependency>
-    
+
     <!-- Spring Framework -->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -130,10 +128,10 @@
     </dependency>
 
     <!-- Hibernate validator -->
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-validator</artifactId>
-    </dependency>
+      <dependency>
+        <groupId>org.hibernate.validator</groupId>
+        <artifactId>hibernate-validator</artifactId>
+      </dependency>
 
     <!-- Flyway (DB Migration) -->
     <dependency>
@@ -196,7 +194,7 @@
       <artifactId>activemq-spring</artifactId>
     </dependency>
 
-    <!-- Kafka, Avro -->  
+    <!-- Kafka, Avro -->
     <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka-clients</artifactId>
@@ -206,6 +204,10 @@
       <groupId>org.apache.avro</groupId>
       <artifactId>avro</artifactId>
       <version>${avro.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
     </dependency>
     <dependency>
       <groupId>io.confluent</groupId>
@@ -222,14 +224,19 @@
         </exclusion>
       </exclusions>
     </dependency>
-    
+
+
     <!-- Testing dependencies -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
@@ -240,7 +247,13 @@
       <artifactId>mockito-core</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+
 
   <build>
     <plugins>
