OC-560 ~ Introduces security configuration and spring kafka in da kafka adapter
And some other refactorings:
* Renames PersistenceConfigWs to PersistenceConfig
* Moves messageprocessors package inside jms package

--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
@@ -58,13 +58,26 @@ entitymanager.packages.to.scan.core=org.opensmartgridplatform.domain.da.entities
 # =========================================================
 # KAFKA CONFIG
 # =========================================================
-distributionautomation.kafka.bootstrap.servers=localhost:9092,localhost:9093
-distributionautomation.kafka.key.serializer=org.apache.kafka.common.serialization.LongSerializer
-distributionautomation.kafka.value.serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
-distributionautomation.kafka.schema.registry.url=http://localhost:8081
+# Example configuration of multiple servers for use in acceptance or production environments
+#distributionautomation.kafka.bootstrap.servers=localhost:9092,localhost:9093
+distributionautomation.kafka.bootstrap.servers=localhost:9092
+#distributionautomation.kafka.schema.registry.url=http://localhost:8081
 
-distributionautomation.kafka.topic.meterreading.transformer.power=meter-reading-power
-distributionautomation.kafka.topic.meterreading.transformer.internaltemperature=meter-reading-internal-temperature
+distributionautomation.kafka.producer.topic=g_osgp_distributionautomation_monitoring_dev
+#distributionautomation.kafka.consumer.topic=g_osgp_distributionautomation_control_dev
+#distributionautomation.kafka.consumer.group.id=CmdbFeedbackConsumer
+#distributionautomation.kafka.consumer.enable.auto.commit=true
+#distributionautomation.kafka.consumer.poll.timeout=3000
+#distributionautomation.kafka.consumer.concurrency=3
+
+# Example Kafka SSL configuration for use in acceptance or production environments
+#kafka.security.protocol=SSL
+#kafka.ssl.truststore.location=/etc/osp/kafka/kafka.client.truststore.jks
+#kafka.ssl.truststore.password=confluent
+#kafka.ssl.keystore.location=/etc/osp/kafka/kafka.client.keystore.jks
+#kafka.ssl.keystore.password=confluent
+#kafka.ssl.key.password=confluent
+#kafka.ssl.endpoint.identification.algorithm=
 
 # =========================================================
 # MESSAGING CONFIG
