OC-560 ~ Updates properties
- Removes web service properties
- Updates hibernate properties

--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
@@ -1,16 +1,3 @@
-#Jaxb2Marshaller
-jaxb2.marshaller.context.path.distributionautomation.generic=org.opensmartgridplatform.adapter.ws.schema.distributionautomation.generic
-
-# SOAP message logging to database and printing to log file
-soap.message.logging.enabled=false
-soap.message.printing.enabled=true
-
-#Notification url
-web.service.notification.username=test-org
-web.service.notification.organisation=OSGP
-web.service.notification.enabled=true
-web.service.notification.application.name=DISTRIBUTION_AUTOMATION
-
 # =========================================================
 # PERSISTENCE CONFIG
 # =========================================================
@@ -40,9 +27,9 @@ db.auto_commit=false
 db.idle_timeout=120000
 
 #Hibernate Configuration
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
 hibernate.format_sql=true
-hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+hibernate.physical_naming_strategy=org.opensmartgridplatform.shared.application.config.HibernateNamingStrategy
 hibernate.show_sql=false
 
 #Flyway configuration
