--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
@@ -45,26 +45,24 @@ entitymanager.packages.to.scan.core=org.opensmartgridplatform.domain.da.entities
 # =========================================================
 # KAFKA CONFIG
 # =========================================================
+distributionautomation.kafka.common.properties.prefix=distributionautomation.kafka
+
 # Example configuration of multiple servers for use in acceptance or production environments
 #distributionautomation.kafka.bootstrap.servers=localhost:9092,localhost:9093
 distributionautomation.kafka.bootstrap.servers=localhost:9092
-#distributionautomation.kafka.schema.registry.url=http://localhost:8081
 
 distributionautomation.kafka.producer.topic=g_osgp_distributionautomation_monitoring_dev
-#distributionautomation.kafka.consumer.topic=g_osgp_distributionautomation_control_dev
-#distributionautomation.kafka.consumer.group.id=CmdbFeedbackConsumer
-#distributionautomation.kafka.consumer.enable.auto.commit=true
-#distributionautomation.kafka.consumer.poll.timeout=3000
-#distributionautomation.kafka.consumer.concurrency=3
+distributionautomation.kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+distributionautomation.kafka.producer.value.serializer=org.opensmartgridplatform.adapter.kafka.da.infra.kafka.out.MeterReadingSerializer
 
 # Example Kafka SSL configuration for use in acceptance or production environments
-#kafka.security.protocol=SSL
-#kafka.ssl.truststore.location=/etc/osp/kafka/kafka.client.truststore.jks
-#kafka.ssl.truststore.password=confluent
-#kafka.ssl.keystore.location=/etc/osp/kafka/kafka.client.keystore.jks
-#kafka.ssl.keystore.password=confluent
-#kafka.ssl.key.password=confluent
-#kafka.ssl.endpoint.identification.algorithm=
+#distributionautomation.kafka.security.protocol=SSL
+#distributionautomation.kafka.ssl.truststore.location=/etc/osp/kafka/kafka.client.truststore.jks
+#distributionautomation.kafka.ssl.truststore.password=confluent
+#distributionautomation.kafka.ssl.keystore.location=/etc/osp/kafka/kafka.client.keystore.jks
+#distributionautomation.kafka.ssl.keystore.password=confluent
+#distributionautomation.kafka.ssl.key.password=confluent
+#distributionautomation.kafka.ssl.endpoint.identification.algorithm=
 
 # =========================================================
 # MESSAGING CONFIG
