--- a/osgp/shared/shared/pom.xml
+++ b/osgp/shared/shared/pom.xml
@@ -14,19 +14,19 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>shared</artifactId>
-  <name>shared</name>
-  <packaging>jar</packaging>
-  <!-- Description element is needed for the maven-jxr-plugin to generate
-    a maven site -->
-  <description>Shared module.</description>
-
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-shared</artifactId>
     <version>5.1.0-SNAPSHOT</version>
     <relativePath>../parent-shared/pom.xml</relativePath>
   </parent>
+
+  <artifactId>shared</artifactId>
+  <packaging>jar</packaging>
+  <name>shared</name>
+  <!-- Description element is needed for the maven-jxr-plugin to generate
+    a maven site -->
+  <description>Shared module.</description>
 
   <dependencies>
     <dependency>
@@ -138,6 +138,7 @@
     <dependency>
       <groupId>org.springframework.kafka</groupId>
       <artifactId>spring-kafka</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <!-- Hibernate -->
