--- a/osgp/shared/osgp-ws-smartmetering/pom.xml
+++ b/osgp/shared/osgp-ws-smartmetering/pom.xml
@@ -38,10 +38,13 @@
       <artifactId>spring-ws-core</artifactId>
     </dependency>
 
-    <!-- JAXB API -->
     <dependency>
-      <groupId>javax.xml.bind</groupId>
-      <artifactId>jaxb-api</artifactId>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
     </dependency>
   </dependencies>
 
