SLIM-2257 fixed unit tests

--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -109,7 +109,7 @@ schedule.retry.dlms.backoff.multiplier=2
 schedule.retry.dlms.backoff.exponential=true
 
 # device keys security
-encryption.key.path = /etc/osp/smartmetering/keys/platform/secret.aes
+encryption.key.path=/etc/osp/smartmetering/keys/platform/secret.aes
 
 encryption.rsa.private.key.path=/etc/osp/smartmetering/keys/platform/dlms_device_keys_private
 encryption.rsa.public.key.path=/etc/osp/smartmetering/keys/platform/dlms_device_keys_public
@@ -118,8 +118,8 @@ encryption.rsa.public.key.path=/etc/osp/smartmetering/keys/platform/dlms_device_
 # Triggered Device Simulator Url
 #==========================================================
 
-triggered.simulator.url = https://localhost/osgp-simulator-dlms-triggered/wakeup
-triggered.simulator.ipaddress = 127.0.0.1
+triggered.simulator.url=https://localhost/osgp-simulator-dlms-triggered/wakeup
+triggered.simulator.ipaddress=127.0.0.1
 
 #Web service truststore
 web.service.truststore.location=/etc/ssl/certs/trust.jks
@@ -136,3 +136,9 @@ command.updatefirmware.verificationstatuscheck.interval=10000
 command.updatefirmware.verificationstatuscheck.timeout=60000
 command.updatefirmware.initiationstatuscheck.interval=10000
 command.updatefirmware.initiationstatuscheck.timeout=60000
+
+#==========================================================
+# Throttlins
+#==========================================================
+throttling.max.open.connections=10
+throttling.new.connection.requests=30
