SLIM-2257 cleanup test config. updated throttlingService

--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -138,7 +138,8 @@ command.updatefirmware.initiationstatuscheck.interval=10000
 command.updatefirmware.initiationstatuscheck.timeout=60000
 
 #==========================================================
-# Throttlins
+# Throttling
 #==========================================================
 throttling.max.open.connections=10
 throttling.new.connection.requests=30
+throttling.new.connection.requests.reset.time=2000
