--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -140,6 +140,6 @@ command.updatefirmware.initiationstatuscheck.timeout=60000
 #==========================================================
 # Throttling
 #==========================================================
-throttling.max.open.connections=10
-throttling.new.connection.requests=30
-throttling.new.connection.requests.reset.time=2000
+throttlingService.maxOpenConnections=10
+throttlingService.maxNewConnectionRequests=30
+throttlingService.resetTime=2000
