--- a/super/pom.xml
+++ b/super/pom.xml
@@ -608,12 +608,6 @@
         <artifactId>spring-kafka</artifactId>
         <version>${spring.kafka.version}</version>
       </dependency>
-      <dependency>
-        <groupId>org.springframework.kafka</groupId>
-        <artifactId>spring-kafka-test</artifactId>
-        <version>${spring.kafka.version}</version>
-        <scope>test</scope>
-      </dependency>
 
       <!-- Apache ActiveMQ client -->
       <dependency>
@@ -799,6 +793,14 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-text</artifactId>
         <version>${apache.commons.text.version}</version>
+      </dependency>
+
+      <!-- Spring Test -->
+      <dependency>
+        <groupId>org.springframework.kafka</groupId>
+        <artifactId>spring-kafka-test</artifactId>
+        <version>${spring.kafka.version}</version>
+        <scope>test</scope>
       </dependency>
 
       <!-- Cucumber Framework -->
