SLIM-2257 cdma queue

--- a/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
+++ b/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
@@ -148,6 +148,8 @@ jms.protocol.activemq.messagegroup.cachesize=1024
 #----------------------------------------------------------
 # jms.protocol.dlms.incoming.requests
 jms.protocol.dlms.incoming.requests.queue=osgp-core.1_0.protocol-dlms.1_0.requests
+# jms.protocol.dlms.incoming.requests.cdma
+jms.protocol.dlms.incoming.requests.queue.cdma=osgp-core.1_0.protocol-dlms.1_0.requests.cdma
 # jms.protocol.dlms.incoming.responses
 jms.protocol.dlms.incoming.responses.queue=osgp-core.1_0.protocol-dlms.1_0.responses
 # jms.protocol.dlms.outgoing.requests
