--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -49,7 +49,7 @@ jms.default.broker.url=failover:(tcp://localhost:61616)
 jms.default.connection.queue.prefetch=1
 
 #----------------------------------------------------------
-# jms.dlms.requests
+# jms.dlms.requests Incoming Requests from OSGP Core
 #----------------------------------------------------------
 jms.dlms.requests.queue=protocol-dlms.1_0.osgp-core.1_0.requests
 jms.dlms.requests.initial.redelivery.delay=300000
@@ -57,7 +57,7 @@ jms.dlms.requests.maximum.redelivery.delay=900000
 jms.dlms.requests.redelivery.delay=300000
 
 #----------------------------------------------------------
-# jms.dlms.responses
+# jms.dlms.responses Outgoing Responses to OSGP Core
 #----------------------------------------------------------
 jms.dlms.responses.queue=osgp-core.1_0.protocol-dlms.1_0.responses
 jms.dlms.responses.initial.redelivery.delay=300000
