SLIM-2257 code cleanup

--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -140,6 +140,6 @@ command.updatefirmware.initiationstatuscheck.timeout=60000
 #==========================================================
 # Throttling
 #==========================================================
-throttlingService.maxOpenConnections=10
-throttlingService.maxNewConnectionRequests=30
-throttlingService.resetTime=2000
+throttling.max.open.connections=10
+throttling.max.new.connection.requests=30
+throttling.reset.time=2000
