OC-575: Applies routing of DA messages.

--- a/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
@@ -97,6 +97,11 @@ jms.outbound.osgp.core.requests.queue=osgp-core.1_0.domain-distributionautomatio
 jms.outbound.osgp.core.responses.queue=osgp-core.1_0.domain-distributionautomation.1_0.responses
 
 #----------------------------------------------------------
+# jms.outbound.kafka.responses
+#----------------------------------------------------------
+jms.outbound.kafka.responses.queue=kafka-distributionautomation.1_0.domain-distributionautomation.1_0.responses
+
+#----------------------------------------------------------
 # jms.outbound.ws.responses
 #----------------------------------------------------------
 jms.outbound.ws.responses.queue=ws-distributionautomation.1_0.domain-distributionautomation.1_0.responses
