OC-575: Introduces kafka request queue + listener.

--- a/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
@@ -82,6 +82,11 @@ jms.inbound.osgp.core.requests.queue=domain-distributionautomation.1_0.osgp-core
 jms.inbound.osgp.core.responses.queue=domain-distributionautomation.1_0.osgp-core.1_0.responses
 
 #----------------------------------------------------------
+# jms.inbound.kafka.requests
+#----------------------------------------------------------
+jms.inbound.kafka.requests.queue=domain-distributionautomation.1_0.kafka-distributionautomation.1_0.requests
+
+#----------------------------------------------------------
 # jms.inbound.ws.requests
 #----------------------------------------------------------
 jms.inbound.ws.requests.queue=domain-distributionautomation.1_0.ws-distributionautomation.1_0.requests
