OC-572 ~ Handles MQTT get_data messages

--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
@@ -64,6 +64,15 @@ distributionautomation.kafka.producer.value.serializer=org.opensmartgridplatform
 #distributionautomation.kafka.ssl.key.password=confluent
 #distributionautomation.kafka.ssl.endpoint.identification.algorithm=
 
+peakshaving.kafka.common.properties.prefix=peakshaving.kafka
+
+peakshaving.kafka.bootstrap.servers=localhost:9092
+
+peakshaving.kafka.producer.topic=g_osgp_distributionautomation_peakshaving_dev
+peakshaving.kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+peakshaving.kafka.producer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+
+
 # =========================================================
 # MESSAGING CONFIG
 # =========================================================
