FLEX-5084: Addresses review comments.

--- a/osgp/platform/osgp-adapter-ws-core/pom.xml
+++ b/osgp/platform/osgp-adapter-ws-core/pom.xml
@@ -227,6 +227,13 @@
       <groupId>ma.glasnost.orika</groupId>
       <artifactId>orika-core</artifactId>
     </dependency>
+    
+    <!-- Lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <scope>provided</scope>
+    </dependency>
 
     <!-- Apache ActiveMQ -->
     <dependency>
