SLIM-2077-create-new-secret-mgmt-application

--- a/osgp/platform/pom.xml
+++ b/osgp/platform/pom.xml
@@ -129,6 +129,9 @@
     <!-- Core -->
     <module>osgp-logging</module>
     <module>osgp-core</module>
+
+    <!-- Other -->
+    <module>osgp-secret-management</module>
   </modules>
 
 </project>
