OC-572 ~ Processes review comments

--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
@@ -51,7 +51,7 @@ distributionautomation.kafka.common.properties.prefix=distributionautomation.kaf
 #distributionautomation.kafka.bootstrap.servers=localhost:9092,localhost:9093
 distributionautomation.kafka.bootstrap.servers=localhost:9092
 
-distributionautomation.kafka.producer.topic=g_osgp_distributionautomation_monitoring_dev
+distributionautomation.kafka.topic=g_osgp_distributionautomation_monitoring_dev
 distributionautomation.kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 distributionautomation.kafka.producer.value.serializer=org.opensmartgridplatform.adapter.kafka.da.infra.kafka.out.MeterReadingSerializer
 
@@ -68,7 +68,7 @@ peakshaving.kafka.common.properties.prefix=peakshaving.kafka
 
 peakshaving.kafka.bootstrap.servers=localhost:9092
 
-peakshaving.kafka.producer.topic=g_osgp_distributionautomation_peakshaving_dev
+peakshaving.kafka.topic=g_osgp_distributionautomation_peakshaving_dev
 peakshaving.kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 peakshaving.kafka.producer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
