--- a/super/pom.xml
+++ b/super/pom.xml
@@ -135,6 +135,8 @@
     <kafka.version>2.4.1</kafka.version>
     <avro.version>1.9.2</avro.version>
     <spring.kafka.version>2.4.6.RELEASE</spring.kafka.version>
+    <!-- spring-kafka-test needs a 2.12 version of the scala libraries -->
+    <scala.lang.version>2.12.11</scala.lang.version>
     <lombok.version>1.18.12</lombok.version>
   </properties>
 
@@ -861,10 +863,6 @@
         <version>${spring.kafka.version}</version>
         <scope>test</scope>
 	    <exclusions>
-	      <exclusion>
-	        <groupId>com.fasterxml.jackson.core</groupId>
-	        <artifactId>jackson-annotations</artifactId>
-	      </exclusion>
           <exclusion>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
@@ -874,6 +872,18 @@
             <artifactId>scala-reflect</artifactId>
           </exclusion>
 	    </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-library</artifactId>
+        <version>${scala.lang.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-reflect</artifactId>
+        <version>${scala.lang.version}</version>
+        <scope>test</scope>
       </dependency>
 
       <!-- Cucumber Framework -->
