OC-524: Addresses review comments.

--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/pom.xml
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/pom.xml
@@ -175,14 +175,17 @@
     <dependency>
       <groupId>org.springframework.kafka</groupId>
       <artifactId>spring-kafka-test</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-reflect</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <!-- Testing dependencies -->
