FLEX-5303 ~ Handles IEC60870 light measurement events
Implements IEC60870 event acquisition scenario for light measurement
devices spontaneously sending an ASDU with data concerning the light
sensor status.
The data with the event is translated to an event notification for the
platform indicating whether the light sensor of the light measurement
device reports dark or light.

Update the default device type from DA_DEVICE (old name of a renamed
enum value) to DISTRIBUTION_AUTOMATION_DEVICE.

--- a/osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870/src/main/resources/osgp-adapter-protocol-iec60870.properties
+++ b/osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870/src/main/resources/osgp-adapter-protocol-iec60870.properties
@@ -36,8 +36,8 @@ hibernate.show_sql=false
 #Declares the base package of the entity classes
 entitymanager.packages.to.scan=org.opensmartgridplatform.adapter.protocol.iec60870.domain.entities
 
-# =========================================================		
-# APPLICATION CONFIG		
+# =========================================================
+# APPLICATION CONFIG
 # =========================================================
 
 close.connections.on.broker.failure=false
@@ -48,8 +48,8 @@ retrycount.max=1
 #The amount of time, in milliseconds, the library will wait for a response.
 connection.response.timeout=10000
 
-# =========================================================		
-# IEC60870 CONFIG		
+# =========================================================
+# IEC60870 CONFIG
 # =========================================================
 
 #iec60870
@@ -94,6 +94,11 @@ jms.iec60870.log.item.requests.queue=osgp.logging.protocol
 # Set Time to live in ms (86400000 = 1 day)
 jms.iec60870.log.item.requests.time.to.live=86400000
 
+#----------------------------------------------------------
+# jms.outbound.osgp.core.requests
+#----------------------------------------------------------
+jms.osgp.requests.queue=osgp-core.1_0.protocol-iec60870.1_0.requests
+jms.osgp.requests.time.to.live=180000
 
 # =========================================================
 #  Test Devices IP Addresses
