Added configuralbe encryption type

--- a/osgp/platform/osgp-secret-management/src/main/resources/application.properties
+++ b/osgp/platform/osgp-secret-management/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 soap.secret.resource=file:/etc/ssl/certs/secret.aes
 database.secret.resource=file:/etc/ssl/certs/secret.aes
-
+encryption.provider.type=HSM
 #Database Configuration
 #db.username=osp_admin
 #db.password=1234
