SLIM-2077-improved-tests-and-added-keys-for-test

--- a/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
+++ b/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
@@ -1,7 +1,9 @@
 #Security configuration
 
-soap.secret.resource=file:/etc/ssl/certs/secret.aes
-database.secret.resource=file:/etc/ssl/certs/secret.aes
+#soap.secret.resource=file:/etc/ssl/certs/secret.aes
+#database.secret.resource=file:src/integration-test/resoures/secret-mgmt-db.key
+soap.secret.resource=file:src/integration-test/resources/secret-mgmt-soap.key
+database.secret.resource=file:src/integration-test/resources/secret-mgmt-db.key
 encryption.provider.type=JRE
 
 #Database Configuration
